.get for CVS and STATES immediately returns lists

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,7 @@ long_description_content_type = text/markdown
 author = David W.H. Swenson
 author_email = dwhs@hyperblazer.net
 license = MIT
+license-file = LICENSE
 url = https://github.com/openpathsampling/openpathsampling-cli
 classifiers = 
     License :: OSI Approved :: MIT License
