--- a/.coveragerc
+++ b/.coveragerc
@@ -1,4 +1,8 @@
 [report]
+omit =
+    */paths_cli/tests/*
+    */paths_cli/_installed_version.py
+    */paths_cli/version.py
 exclude_lines =
     no-cov
     def __repr__
