--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = openpathsampling-cli
-version = 0.0.1
+version = 0.0.2
 # version should end in .dev0 if this isn't to be released
 description = Command line tool for OpenPathSampling
 long_description = file: README.md
@@ -18,6 +18,7 @@ classifiers =
     Programming Language :: Python :: 3
 
 [options]
+python_requires = >= 3.6
 install_requires =
     click
     tqdm
