--- a/.github/workflows/autorelease-prep.yml
+++ b/.github/workflows/autorelease-prep.yml
@@ -1,5 +1,3 @@
-# File vencdored from Autorelease; specific version information should be in
-# the INSTALL_AUTORELEASE variable in autorelease-default-env.sh
 name: "Autorelease"
 on:
   pull_request:
@@ -53,9 +51,7 @@ jobs:
           python-version: "3.x"
       - run: |  # TODO: move this to an action
           source ./.github/workflows/autorelease-default-env.sh
-          if [ -f "./.autorelease/test-testpypi.sh" ]; then
-            source ./.autorelease/test-testpypi.sh
-          elif [ -f "autorelease-env.sh" ]; then
+          if [ -f "autorelease-env.sh" ]; then
             cat autorelease-env.sh >> $GITHUB_ENV
           fi
           eval $INSTALL_AUTORELEASE
