--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -3,11 +3,11 @@ name: "Tests"
 on:
   pull_request:
     branches:
-      - master
+      - main
       - stable
   push:
     branches:
-      - master
+      - main
     tags:
       - "v*"
   schedule:
