re-include wizard tests

--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -61,6 +61,6 @@ jobs:
           PY_COLORS: "1"
         run: |
           python -c "import paths_cli"
-          py.test -vv --cov --cov-report xml:cov.xml --ignore paths_cli/tests/wizard
+          py.test -vv --cov --cov-report xml:cov.xml
       - name: "Report coverage"
         run: bash <(curl -s https://codecov.io/bash)
