--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -28,6 +28,10 @@ jobs:
           - 3.8
           - 3.7
           - 3.6
+      INTEGRATIONS: [""]
+      include:
+        CONDA_PY: 3.9
+        INTEGRATIONS: ['all-optionals']
 
     steps:
       - uses: actions/checkout@v2
@@ -38,6 +42,9 @@ jobs:
           python-version: ${{ matrix.CONDA_PY }}
       - name: "Install testing tools"
         run: python -m pip install -r ./devtools/tests_require.txt
+      - name: "Install integrations"
+        if: matrinx.INTEGRATIONS == 'all-optionals'
+        run: conda install -c conda-forge -y openmm openmmtools mdtraj
       - name: "Install"
         run: |
           conda install pip
