--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -36,6 +36,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
+        with:
+          fetch-depth: 2
       - uses: conda-incubator/setup-miniconda@v2
         with:
           auto-update-conda: true
