--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -24,12 +24,12 @@ jobs:
     strategy:
       matrix:
         CONDA_PY:
-          - 3.9
-          - 3.8
-          - 3.7
+          - "3.11"
+          - "3.10"
+          - "3.9"
         INTEGRATIONS: [""]
         include:
-          - CONDA_PY: 3.9
+          - CONDA_PY: "3.11"
             INTEGRATIONS: 'all-optionals'
 
     steps:
