--- a/.github/workflows/autorelease-deploy.yml
+++ b/.github/workflows/autorelease-deploy.yml
@@ -1,10 +1,13 @@
-name: Autorelease
+# Vendored from Autorelease 0.5.1
+# Update by updating Autorelease and running `autorelease vendor actions`
+name: "Autorelease Deploy"
 on:
   release:
     types: [published]
 
 jobs:
   deploy_pypi:
+    if: ${{ github.repository == 'openpathsampling/openpathsampling-cli' }}
     runs-on: ubuntu-latest
     name: "Deploy to PyPI"
     steps:
@@ -17,7 +20,11 @@ jobs:
           if [ -f "autorelease-env.sh" ]; then
             cat autorelease-env.sh >> $GITHUB_ENV
           fi
-          eval $INSTALL_AUTORELEASE
+          if [ -f "./.autorelease/install-autorelease" ]; then
+            source ./.autorelease/install-autorelease
+          else
+            eval $INSTALL_AUTORELEASE
+          fi
         name: "Install autorelease"
       - run: |
           python -m pip install twine wheel
