--- a/.github/workflows/autorelease-prep.yml
+++ b/.github/workflows/autorelease-prep.yml
@@ -33,7 +33,7 @@ jobs:
           fi
         name: "Install autorelease"
       - run: |
-          python -m pip install twine wheel
+          python -m pip install twine wheel setuptools
         name: "Install release tools"
       - run: |
           bump-dev-version
