--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = openpathsampling-cli
-version = 0.3.1.dev0
+version = 0.3.1
 # version should end in .dev0 if this isn't to be released
 description = Command line tool for OpenPathSampling
 long_description = file: README.md
